--- a/quotes-using-mvvm/app/src/main/res/layout/activity_main.xml
+++ b/quotes-using-mvvm/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
+            android:id="@+id/btnPrevious"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -87,9 +88,10 @@
             android:text="PREVIOUS"
             android:onClick="onPrevious"
             android:textColor="#80FFFFFF"
-            android:textSize="18sp"></TextView>
+            android:textSize="18sp"/>
 
         <TextView
+            android:id="@+id/btnNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -99,7 +101,7 @@
             android:onClick="onNext"
             android:textAlignment="textEnd"
             android:textColor="#80FFFFFF"
-            android:textSize="18sp"></TextView>
+            android:textSize="18sp"/>
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
